[gd_scene load_steps=4 format=3 uid="uid://bhxnsv3cdgky2"]

[ext_resource type="LabelSettings" uid="uid://b18g2ifl6lkt7" path="res://assets/lg_red_48.tres" id="1_aop6p"]
[ext_resource type="Script" path="res://scenes/game_over/game_over.gd" id="1_bi7g1"]
[ext_resource type="AudioStream" uid="uid://6ur4d2fcfttg" path="res://assets/audio/game_over.wav" id="3_22tpt"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bi7g1")

[node name="LabelGameOver" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"
label_settings = ExtResource("1_aop6p")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelSpace" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "PRESS SPACE"
label_settings = ExtResource("1_aop6p")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_22tpt")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
